[package]
name = "jj-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
#jj-lib = "0.26.0"
uniffi = { version = "0.29.0", features = ["build", "cli"] }

[build-dependencies]
uniffi = { version = "0.29.0", features = ["build", "cli"] }

[lib]
crate-type = ["cdylib", "staticlib"]
name = "jj_api"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
